# zero2prod

./: Cargo.toml  Dockerfile  Makefile
.github/workflows/: rust.yml
configuration/: production.yaml
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs
