[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
actix-web = "4.3.1"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-web-lab = "0.19.1"
anyhow = "1.0.71"
argon2 = { version = "0.5.0", features = ["std"] }
base64 = "0.21.2"
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
config = "0.13.3"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
log = "0.4.17"
rand = { version = "0.8.5", features = ["std_rng"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.96"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
validator = "0.16.0"

[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-tokio-rustls", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11.18" 
default-features = false
# We need the `json` feature flag to serialize/deserialize JSON payloads
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1"
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5.18"
serde_json = "1.0.96"
linkify = "0.9.0"
reqwest_cookie_store = "0.5.0"
